--- a/TipTime/app/src/main/res/layout/activity_main.xml
+++ b/TipTime/app/src/main/res/layout/activity_main.xml
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:checked="true"
+            android:checked="false"
             android:text="@string/round_up_tip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/icon_round_up"
